--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,11 +5,15 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #fee6c8;
 };
 
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+.newcard {
+  scroll-padding: 10px;
 }
